--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/guillermoap/capacitacion-git#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "helmet": "^4.1.1",
     "serve-index": "^1.9.1"
   }
 }
